--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+backports.ssl-match-hostname==3.5.0.1
 bleach==2.0.0
+certifi==2017.4.17
+configparser==3.5.0
 cycler==0.10.0
 decorator==4.0.11
-entrypoints==0.2.2
+entrypoints==0.2.3
+enum34==1.1.6
+funcsigs==1.0.2
+functools32==3.2.3.post2
 h5py==2.7.0
 html5lib==0.999999999
 ipykernel==4.6.1
-ipython==6.1.0
+ipython==5.4.1
 ipython-genutils==0.2.0
 ipywidgets==6.0.0
-jedi==0.10.2
 Jinja2==2.9.6
 jsonschema==2.6.0
 jupyter==1.0.0
@@ -19,13 +26,16 @@ Keras==2.0.4
 MarkupSafe==1.0
 matplotlib==2.0.2
 mistune==0.7.4
+mock==2.0.0
 nbconvert==5.2.1
 nbformat==4.3.0
 networkx==1.11
 notebook==5.0.0
-numpy==1.12.1
+numpy==1.13.0
 olefile==0.44
 pandocfilters==1.4.1
+pathlib2==2.2.1
+pbr==3.0.1
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==4.1.1
@@ -40,18 +50,19 @@ PyWavelets==0.5.2
 PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.0
-regional==1.1.2
+scandir==1.5
 scikit-image==0.13.0
 scipy==0.19.0
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
 sk-video==1.1.7
+subprocess32==3.2.7
 tensorflow-gpu==1.1.0
 terminado==0.6
 testpath==0.3.1
 Theano==0.9.0
 tornado==4.5.1
-tqdm==4.14.0
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
