--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ funcsigs==1.0.2
 functools32==3.2.3.post2
 h5py==2.7.0
 idna==2.5
-Keras==2.0.5
+Keras==2.0.6
+keras-contrib==1.2.1
+keras-vis==0.3.1
 matplotlib==2.0.2
 mock==2.0.0
 networkx==1.11
 neurofinder==1.1.1
-numpy==1.13.0
+numpy==1.13.1
 olefile==0.44
 pandas==0.20.2
 pbr==3.0.1
@@ -26,13 +28,15 @@ PyYAML==3.12
 regional==1.1.2
 requests==2.17.3
 scikit-image==0.13.0
+scikit-learn==0.18.2
 scikit-video==0.1.2
-scipy==0.19.0
+scipy==0.19.1
 six==1.10.0
 sk-video==1.1.8
 subprocess32==3.2.7
 tensorflow-gpu==1.1.0
 Theano==0.9.0
+tifffile==0.12.1
 tqdm==4.14.0
 urllib3==1.21.1
 Werkzeug==0.12.2
