--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,81 @@
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+backports.ssl-match-hostname==3.5.0.1
+backports.weakref==1.0rc1
+bleach==1.5.0
 certifi==2017.4.17
 chardet==3.0.4
 click==6.7
+configparser==3.5.0
 cycler==0.10.0
-decorator==4.0.11
+decorator==4.1.2
+entrypoints==0.2.3
+enum34==1.1.6
 funcsigs==1.0.2
 functools32==3.2.3.post2
 h5py==2.7.0
+html5lib==0.9999999
 idna==2.5
+ipykernel==4.6.1
+ipython==5.4.1
+ipython-genutils==0.2.0
+ipywidgets==6.0.0
+Jinja2==2.9.6
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.1.0
+jupyter-console==5.1.0
+jupyter-core==4.3.0
 Keras==2.0.6
-keras-contrib==1.2.1
-keras-vis==0.3.1
+Markdown==2.6.8
+MarkupSafe==1.0
 matplotlib==2.0.2
+mistune==0.7.4
 mock==2.0.0
+nbconvert==5.2.1
+nbformat==4.3.0
 networkx==1.11
 neurofinder==1.1.1
+notebook==5.0.0
 numpy==1.13.1
 olefile==0.44
-pandas==0.20.2
-pbr==3.0.1
-Pillow==4.1.1
+pandas==0.20.3
+pandocfilters==1.4.1
+pathlib2==2.3.0
+pbr==3.1.1
+pexpect==4.2.1
+pickleshare==0.7.4
+Pillow==4.2.1
+prompt-toolkit==1.0.14
 protobuf==3.3.0
+ptyprocess==0.5.2
+Pygments==2.2.0
 pyparsing==2.2.0
-python-dateutil==2.6.0
+python-dateutil==2.6.1
 pytz==2017.2
 PyWavelets==0.5.2
 PyYAML==3.12
+pyzmq==16.0.2
+qtconsole==4.3.0
 regional==1.1.2
-requests==2.17.3
+requests==2.18.2
+scandir==1.5
 scikit-image==0.13.0
-scikit-learn==0.18.2
-scikit-video==0.1.2
 scipy==0.19.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
 sk-video==1.1.8
 subprocess32==3.2.7
-tensorflow-gpu==1.1.0
+tensorflow-gpu==1.2.1
+terminado==0.6
+testpath==0.3.1
 Theano==0.9.0
 tifffile==0.12.1
-tqdm==4.14.0
-urllib3==1.21.1
+tornado==4.5.1
+tqdm==4.15.0
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
 Werkzeug==0.12.2
+widgetsnbextension==2.0.0
