--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ regional==1.1.2
 requests==2.18.2
 scandir==1.5
 scikit-image==0.13.0
+scikit-learn==0.18.2
 scipy==0.19.1
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
