--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.5.0.1
 backports.weakref==1.0rc1
 bleach==1.5.0
+c2s==0.1.0.dev0
 certifi==2017.4.17
 chardet==3.0.4
 click==6.7
+cmt==0.6.0
 configparser==3.5.0
 cycler==0.10.0
 decorator==4.1.2
